--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 name = "signup"
 main = "src/index.js"
-compatibility_date = "2025-09-16"
+compatibility_date = "2025-01-01"
 
-[vars]
-DEFAULT_SERVER = "http://trial.123gate.org:80"
+# Sirve ficheros estáticos (como enlaces.m3u)
+[site]
+bucket = "./"
